--- a/.i3/i3status.conf
+++ b/.i3/i3status.conf
@@ -6,19 +6,23 @@
 # ß
 # If the above line is not correctly displayed, fix your editor first!
 
+#position of i3 status bar
+
+
 general {
         colors = true
-        interval = 5
+        interval = 1
 }
 
 order += "volume master"
 #order += "ipv6"
 order += "disk /"
+order += "disk /home"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
-order += "wireless wlan0"
+#order += "wireless wlan0"
 order += "ethernet eth0"
-#order += "battery 0"
+order += "battery 0"
 order += "cpu_usage"
 order += "tztime local"
 
@@ -28,7 +32,7 @@ volume master {
   mixer = "Master"
   mixer_idx = 0
   # termsyn font
-  format = "À %volume "
+  #format = " ♪: %volume "
 }
 
 wireless wlan0 {
@@ -43,7 +47,12 @@ ethernet eth0 {
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+	format = "%status %percentage %remaining"
+	last_full_capacity = true
+	integer_battery_capacity = true
+	threshold_type  = "time"
+	low_threshold   = 15
+	path = "/sys/class/power_supply/BAT1/uevent" 
 }
 
 run_watch DHCP {
@@ -63,5 +72,9 @@ cpu_usage{
 }
 
 disk "/" {
-        format = "\xE2\x98\xA0 %avail Free"
+#        format = "\xE2\x98\xA0 %avail SSD"
+        format = "%avail SSD"
+}
+disk "/home" {
+        format = "%avail /home"
 }
