--- a/.i3/config
+++ b/.i3/config
@@ -38,8 +38,8 @@ bindsym XF86AudioLowerVolume exec amixer set Master 5%-
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec gnome-terminal
-bindsym $mod+Return exec urxvt
-bindsym $mod+Ctrl+t exec urxvt
+bindsym $mod+Return exec urxvt 
+bindsym $mod+Ctrl+t exec urxvx
 
 bindsym $mod+Ctrl+q exec /home/fabio/qtcreator-3.2.1/bin/qtcreator
 # kill focused window
@@ -185,16 +185,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-#configure monitors
-
-exec xrandr --output HDMI1 --off 
-#exec xrandr --output HDMI1 --auto --left-of eDP1
-
-
 #Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        font pango:DejaVu Sans Mono, Icons 12
-        status_command i3status
+        font pango:DejaVu Sans Mono, Icons 8 
+ 	position top
+        status_command i3status -c ~/.i3/i3status.conf
 
 }
